Create exchange adapter + nbp scheduled exchanges