@@ -7,12 +7,14 @@ import org.mapstruct.factory.Mappers;
 import pl.mbcode.nn.bank.account.dto.AccountDto;
 import pl.mbcode.nn.bank.account.dto.BalanceDto;
 import pl.mbcode.nn.bank.account.dto.CreateAccountCommandDto;
+import pl.mbcode.nn.bank.account.dto.ExchangeMoneyCommandDto;
 import pl.mbcode.nn.bank.command.CreateAccountCommand;
+import pl.mbcode.nn.bank.command.ExchangeMoneyCommand;
 
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Mapper
 public interface AccountMapper {
@@ -37,6 +39,9 @@ public interface AccountMapper {
     static List<BalanceDto> balanceMapToList(Map<Currency, BigDecimal> inputMap) {
         return inputMap.entrySet().stream()
                 .map(entry -> new BalanceDto(entry.getKey(), entry.getValue()))
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    @Mapping(source = "dto.amount", target = "amount", qualifiedByName = "doubleToBigDecimal")
+    ExchangeMoneyCommand toCommand(ExchangeMoneyCommandDto dto, UUID accountId);
 }
